Continued styling of home page

--- a/src/template.html
+++ b/src/template.html
@@ -11,10 +11,10 @@
 
 <body>
   <header>
-    <nav>
-      <button>Home</button>
-      <button>Menu</button>
-      <button>About</button>
+    <nav class="nav">
+      <button class="nav__button selected">Home</button>
+      <button class="nav__button">Menu</button>
+      <button class="nav__button">About</button>
     </nav>
   </header>
 
@@ -23,10 +23,9 @@
     <div class="container hero">
       <div class="hero__image">
         <img src="./ghost_icon.svg" alt="Ghost Logo">
-        <h1 class="hero__heading">Spooky Monster Restaurant</h1>
+        <h1 class="hero__heading">Spookalicious</h1>
       </div>
-      <p class="hero__text">This is the greatest restaurant. Everyone who goes here looks around and they say, "You know
-        - it's a great restaurant. It really is. It's the greatest."</p>
+      <p class="hero__text">Food tastes better when it's spooky.</p>
     </div>
 
   </div>
