Complete 3 main pages and tab-switching

--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Restaurant Page</title>
+  <title>Spookalicious</title>
   <link rel="icon" type="image/x-icon" href="./ghost_icon.svg">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -12,22 +12,13 @@
 <body>
   <header>
     <nav class="nav">
-      <button class="nav__button selected">Home</button>
-      <button class="nav__button">Menu</button>
-      <button class="nav__button">About</button>
+      <button id="nav-home" class="nav__button selected">Home</button>
+      <button id="nav-menu" class="nav__button">Menu</button>
+      <button id="nav-about" class="nav__button">About</button>
     </nav>
   </header>
 
-  <div class="content">
-
-    <div class="container hero">
-      <div class="hero__image">
-        <img src="./ghost_icon.svg" alt="Ghost Logo">
-        <h1 class="hero__heading">Spookalicious</h1>
-      </div>
-      <p class="hero__text">Food tastes better when it's spooky.</p>
-    </div>
-
+  <div id="content">
   </div>
 </body>
 
